--- a/IzPack_RegistryPanel/.classpath
+++ b/IzPack_RegistryPanel/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_20"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/jRegistryKey.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/installer.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/uninstaller.jar"/>
