--- a/JWebContentExtension/.classpath
+++ b/JWebContentExtension/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="lib" path="/XAMJ_Build/ext/javafxgui.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/ext/Scenario.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/ext/websvc.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_20"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/ext/javafxc.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/ext/javafxrt.jar"/>
 	<classpathentry kind="output" path=""/>
