--- a/IzPack_RegistryPanel/.classpath
+++ b/IzPack_RegistryPanel/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
+	<classpathentry excluding="com/|class/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/jRegistryKey.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/installer.jar"/>
 	<classpathentry kind="lib" path="/XAMJ_Build/uninstaller.jar"/>
+	<classpathentry kind="lib" path="class"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
