Update cssparser code to commit 462 "No longer skip the following declarations if a css star hack was used (CSS21 and CSS3)". Align Loboevolution code to cssparser change.

--- a/parser/src/com/steadystate/css/parser/SACParserMessages.properties
+++ b/parser/src/com/steadystate/css/parser/SACParserMessages.properties
@@ -16,6 +16,7 @@ invalidMediaRule=Error in @media rule.
 invalidStyleRule=Error in style rule.
 invalidStyleDeclaration=Error in style declaration.
 invalidDeclaration=Error in declaration.
+invalidDeclarationStarHack=Error in declaration. ''*'' is not allowed as first char of a property.
 invalidSelectorList=Error in selector list.
 invalidSelector=Error in selector.
 invalidSimpleSelector=Error in simple selector.
