--- a/Primary_Extension/lobo-extension.properties
+++ b/Primary_Extension/lobo-extension.properties
@@ -1,5 +1,5 @@
 extension.name=Lobo's Primary Extension
-extension.description=This is the primary extension of the Lobo browser.\r\n\
+extension.description=This is the primary extension of the Lobo Evolution.\r\n\
                       It implements clientlets for HTML, XAMJ, text files,\r\n\
 					  file downloading and others.                      
 extension.by=The Lobo Project
