--- a/XAMJ_Build/build.xml
+++ b/XAMJ_Build/build.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0"?>
 <!-- ======================================================================                                                     
-The Lobo Evolution
+	The Lobo Evolution
 ====================================================================== -->
 <project name="project" default="default">
-
 	<description> Lobo Evolution</description>
-
 	<property name="lobo.version" value="0.99.1" />
 	<property name="build.dir" value="/tmp/lobo-build/" />
 	<property name="lobo.dir" value="${build.dir}/lobo-${lobo.version}" />
 	<property name="izpack.home" value="/tmp/IzPack/" />
-
+	<property name="report.findbugs.dir" value="${build.dir}/findbugs/" />
 	<taskdef name="izpack" classpath="compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
-
 	<target name="default" depends="builddir,distros" />
 	<target name="distros" depends="installer,lobo_zip" />
-
+	
 	<target name="builddir">
 		<mkdir dir="${build.dir}" />
 	</target>
-
+	
 	<target name="installer" depends="izpackext_jar,directory_structure">
 		<copy todir="${build.dir}">
 			<fileset dir="../XAMJ_Build" includes="jRegistryKey.jar" />
@@ -27,15 +24,15 @@ The Lobo Evolution
 		<copy todir="${izpack.home}/bin/panels">
 			<fileset dir="${build.dir}" includes="RegistryPanel.jar" />
 		</copy>
-		<izpack input="C:\Users\utente\workspace\Loboevolution\trunk\XAMJ_Build\install.xml" output="${build.dir}/install-lobo-${lobo.version}.jar" installerType="standard" basedir="${lobo.dir}" izPackDir="${izpack.home}" />
+		<izpack input="install.xml" output="${build.dir}/install-lobo-${lobo.version}.jar" installerType="standard" basedir="${lobo.dir}" izPackDir="${izpack.home}" />
 	</target>
-
+	
 	<target name="lobo_zip" depends="directory_structure">
 		<zip destfile="${build.dir}/lobo-distro-${lobo.version}.zip">
 			<zipfileset dir="${lobo.dir}" includes="**" prefix="lobo-distro-${lobo.version}" />
 		</zip>
 	</target>
-
+	
 	<target name="directory_structure" depends="cobra_no_commons,primary_extension,lobo_jar,public_jar">
 		<mkdir dir="${lobo.dir}" />
 		<delete>
@@ -56,31 +53,31 @@ The Lobo Evolution
 			<fileset dir="../XAMJ_Build/lobo-docs" includes="**/*.html,**/*.css,**/*.gif" />
 		</copy>
 	</target>
-
+	
 	<target name="cobra_no_commons" depends="html_classfiles,parser_classfiles">
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../HTML_Renderer/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../parser/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" update="true" />
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-
+		
 	<target name="primary_extension" depends="primary_extension_classfiles">
 		<jar destfile="${build.dir}/primary.jar" basedir="../Primary_Extension/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" />
 		<jar destfile="${build.dir}/primary.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-
+		
 	<target name="public_jar" depends="public_classfiles">
 		<jar destfile="${build.dir}/lobo-pub.jar" basedir="../Platform_Public_API/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/lobo-pub.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-
+	
 	<target name="public_classfiles">
 		<javac srcdir="../Platform_Public_API/bin/" source="1.8" destdir="../Platform_Public_API/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-
+	
 	<target name="primary_extension_classfiles">
 		<javac srcdir="../Primary_Extension/bin/" source="1.8" destdir="../Primary_Extension/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-
+	
 	<target name="lobo_jar" depends="lobo_classfiles,common_classfiles">
 		<jar destfile="${build.dir}/lobo.jar" basedir="../Platform_Core/bin/" includes="**/*.class">
 			<manifest>
@@ -92,29 +89,40 @@ The Lobo Evolution
 		<jar destfile="${build.dir}/lobo.jar" basedir="../Platform_Core/bin/" includes="**/*.png,**/*.gif" update="true" />
 		<jar destfile="${build.dir}/lobo.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-
+	
 	<target name="lobo_classfiles" depends="public_classfiles,common_classfiles">
 		<javac srcdir="../Platform_Core/bin/" source="1.8" destdir="../Platform_Core/bin/" classpath="Common/bin/:Platform_Public_API/bin/" debug="on" includeantruntime="false" />
 	</target>
-
+		
 	<target name="common_classfiles" depends="">
 		<javac srcdir="../Common/bin/" source="1.8" destdir="../Common/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-
+	
 	<target name="html_classfiles" depends="common_classfiles,parser_classfiles">
 		<javac srcdir="../HTML_Renderer/bin/" source="1.8" destdir="../HTML_Renderer/bin/" classpath="Common:parser/bin/" debug="on" includeantruntime="false" />
 	</target>
-
-	<target name="parser_classfiles">
+	
+	<target name="parser_classfiles" depends="findbugs_compile">
 		<javac srcdir="../parser/bin/" source="1.8" destdir="../parser/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-
+	
 	<target name="izpackext_jar" depends="izpackext_classfiles">
 		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="../IzPack_RegistryPanel/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-
+	
 	<target name="izpackext_classfiles">
 		<javac srcdir="../IzPack_RegistryPanel/bin/" source="1.8" destdir="../IzPack_RegistryPanel/bin/" classpath="XAMJ_Build/installer.jar" debug="on" includeantruntime="false" />
+	</target>
+	
+	<target name="findbugs_compile" description="Run code analysis over code to check for problems.">
+		<taskdef name="findbugs" classpath="lib/findbugs-ant-3.0.0.jar" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" />
+		<mkdir dir="${report.findbugs.dir}" />
+		<findbugs home="." workHard="true" output="html" outputFile="${report.findbugs.dir}/findbugs.html">
+			<class location="${build.dir}/cobra-no-commons.jar" />
+			<class location="${build.dir}/lobo.jar" />
+		    <class location="${build.dir}/lobo-pub.jar" />
+			<class location="${build.dir}/primary.jar" />
+		</findbugs>
 	</target>
 </project>
