Added PMD, java source code analyzer

--- a/XAMJ_Build/build.xml
+++ b/XAMJ_Build/build.xml
@@ -9,14 +9,15 @@
 	<property name="lobo.dir" value="${build.dir}/lobo-${lobo.version}" />
 	<property name="izpack.home" value="/tmp/IzPack/" />
 	<property name="report.findbugs.dir" value="${build.dir}/findbugs/" />
+	<property name="report.pmd.dir" value="${build.dir}/pmd/" />
 	<taskdef name="izpack" classpath="compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
 	<target name="default" depends="builddir,distros" />
 	<target name="distros" depends="installer,lobo_zip" />
-	
+
 	<target name="builddir">
 		<mkdir dir="${build.dir}" />
 	</target>
-	
+
 	<target name="installer" depends="izpackext_jar,directory_structure">
 		<copy todir="${build.dir}">
 			<fileset dir="../XAMJ_Build" includes="jRegistryKey.jar" />
@@ -26,13 +27,13 @@
 		</copy>
 		<izpack input="install.xml" output="${build.dir}/install-lobo-${lobo.version}.jar" installerType="standard" basedir="${lobo.dir}" izPackDir="${izpack.home}" />
 	</target>
-	
-	<target name="lobo_zip" depends="directory_structure,findbugs_compile">
+
+	<target name="lobo_zip" depends="directory_structure,findbugs_compile,pmd_compile">
 		<zip destfile="${build.dir}/lobo-distro-${lobo.version}.zip">
 			<zipfileset dir="${lobo.dir}" includes="**" prefix="lobo-distro-${lobo.version}" />
 		</zip>
 	</target>
-	
+
 	<target name="directory_structure" depends="cobra_no_commons,primary_extension,lobo_jar,public_jar">
 		<mkdir dir="${lobo.dir}" />
 		<delete>
@@ -53,31 +54,31 @@
 			<fileset dir="../XAMJ_Build/lobo-docs" includes="**/*.html,**/*.css,**/*.gif" />
 		</copy>
 	</target>
-	
+
 	<target name="cobra_no_commons" depends="html_classfiles,parser_classfiles">
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../HTML_Renderer/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../parser/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" update="true" />
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-		
+
 	<target name="primary_extension" depends="primary_extension_classfiles">
 		<jar destfile="${build.dir}/primary.jar" basedir="../Primary_Extension/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" />
 		<jar destfile="${build.dir}/primary.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-		
+
 	<target name="public_jar" depends="public_classfiles">
 		<jar destfile="${build.dir}/lobo-pub.jar" basedir="../Platform_Public_API/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/lobo-pub.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-	
+
 	<target name="public_classfiles">
 		<javac srcdir="../Platform_Public_API/bin/" source="1.8" destdir="../Platform_Public_API/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="primary_extension_classfiles">
 		<javac srcdir="../Primary_Extension/bin/" source="1.8" destdir="../Primary_Extension/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="lobo_jar" depends="lobo_classfiles,common_classfiles">
 		<jar destfile="${build.dir}/lobo.jar" basedir="../Platform_Core/bin/" includes="**/*.class">
 			<manifest>
@@ -89,40 +90,51 @@
 		<jar destfile="${build.dir}/lobo.jar" basedir="../Platform_Core/bin/" includes="**/*.png,**/*.gif" update="true" />
 		<jar destfile="${build.dir}/lobo.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-	
+
 	<target name="lobo_classfiles" depends="public_classfiles,common_classfiles">
 		<javac srcdir="../Platform_Core/bin/" source="1.8" destdir="../Platform_Core/bin/" classpath="Common/bin/:Platform_Public_API/bin/" debug="on" includeantruntime="false" />
 	</target>
-		
+
 	<target name="common_classfiles" depends="">
 		<javac srcdir="../Common/bin/" source="1.8" destdir="../Common/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="html_classfiles" depends="common_classfiles,parser_classfiles">
 		<javac srcdir="../HTML_Renderer/bin/" source="1.8" destdir="../HTML_Renderer/bin/" classpath="Common:parser/bin/" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="parser_classfiles">
 		<javac srcdir="../parser/bin/" source="1.8" destdir="../parser/bin/" classpath="" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="izpackext_jar" depends="izpackext_classfiles">
 		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="../IzPack_RegistryPanel/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="../XAMJ_Build/" includes="log4j2.xml" update="true" />
 	</target>
-	
+
 	<target name="izpackext_classfiles">
 		<javac srcdir="../IzPack_RegistryPanel/bin/" source="1.8" destdir="../IzPack_RegistryPanel/bin/" classpath="XAMJ_Build/installer.jar" debug="on" includeantruntime="false" />
 	</target>
-	
+
 	<target name="findbugs_compile">
 		<taskdef name="findbugs" classpath="lib/findbugs-ant-3.0.0.jar" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" />
 		<mkdir dir="${report.findbugs.dir}" />
 		<findbugs home="." workHard="true" output="html" outputFile="${report.findbugs.dir}/findbugs.html">
 			<class location="${build.dir}/cobra-no-commons.jar" />
 			<class location="${build.dir}/lobo.jar" />
-		    <class location="${build.dir}/lobo-pub.jar" />
+			<class location="${build.dir}/lobo-pub.jar" />
 			<class location="${build.dir}/primary.jar" />
 		</findbugs>
+	</target>
+
+	<target name="pmd_compile">
+		<taskdef name="pmd" classpath="lib/pmd/pmd-4.2.6.jar" classname="net.sourceforge.pmd.ant.PMDTask"/>
+		<mkdir dir="${report.pmd.dir}" />
+		<pmd rulesetfiles="lib/pmd/rulset.xml">
+			<formatter type="html" toFile="${report.pmd.dir}/pmd.html"/>
+			<fileset dir="..">
+				<include name="**/*.java"/>
+			</fileset>
+		</pmd>
 	</target>
 </project>
