Update CSS Parser to 0.9.21

--- a/parser/src/main/java/com/steadystate/css/parser/SACParserMessages.properties
+++ b/parser/src/main/java/com/steadystate/css/parser/SACParserMessages.properties
@@ -6,6 +6,7 @@ invalidStyleSheet=Error in style sheet.
 invalidRule=Error in rule.
 invalidUnknownRule=Error in unknown at-rule.
 invalidCharsetRule=Error in @charset rule.
+misplacedCharsetRule=The @charset must be the first element in the style sheet.
 invalidImportRule=Error in @import rule.
 invalidImportRuleIgnored=@import rule must occur before all other rules.
 invalidImportRuleIgnored2=@import rule must occur before all other rules, except the @charset rule.
@@ -16,6 +17,7 @@ invalidMediaRule=Error in @media rule.
 invalidStyleRule=Error in style rule.
 invalidStyleDeclaration=Error in style declaration.
 invalidDeclaration=Error in declaration.
+invalidDeclarationInvalidChar=Error in declaration; invalid character \"{0}\" found.
 invalidDeclarationStarHack=Error in declaration. ''*'' is not allowed as first char of a property.
 invalidSelectorList=Error in selector list.
 invalidSelector=Error in selector.
@@ -34,3 +36,4 @@ ignoringRule=Ignoring the whole rule.
 ignoringFollowingDeclarations=Ignoring the following declarations in this rule.
 
 tokenMgrError=Lexical error.
+domException=DOM exception: ''{0}''
