--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,13 @@
 <project name="trevis_build" default="build">
   <target name="build">
-      <ant antfile="/XAMJ_Build/build.xml" target="build">
+      <ant antfile="XAMJ_Build/build.xml" target="build">
       </ant>
   </target>
   <target name="test" depends="build">
     <junit>
         <formatter type="plain" usefile="false" /> <!-- to screen -->
         <batchtest>
-            <fileset dir="/Testing/src/main/java/org/lobobrowser/html/" includes="**/*.java" />
+            <fileset dir="Testing/src/main/java/org/lobobrowser/html/" includes="**/*.java" />
         </batchtest>
     </junit>
 </target>
