--- a/XAMJ_Build/build.xml
+++ b/XAMJ_Build/build.xml
@@ -10,9 +10,8 @@
 	<property name="izpack.home" value="/tmp/IzPack/" />
 	<property name="report.findbugs.dir" value="${build.dir}/findbugs/" />
 	<property name="report.pmd.dir" value="${build.dir}/pmd/" />
-	<taskdef name="izpack" classpath="XAMJ_Build\compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" /> <!-- Trevis-ci run -->
-	<!--taskdef name="izpack" classpath="compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" /> Run from Eclipse-->
-	<target name="default" depends="builddir,distros" />
+	<taskdef name="izpack" classpath="XAMJ_Build\compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
+	<target name="default" depends="builddir,distros,findbugs_compile,pmd_compile" />
 	<target name="distros" depends="installer,lobo_zip" />
 
 	<target name="builddir">
@@ -118,9 +117,9 @@
 	</target>
 
 	<target name="findbugs_compile">
-		<taskdef name="findbugs" classpath="lib/findbugs-ant-3.0.0.jar" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" />
+		<taskdef name="findbugs" classpath="XAMJ_Build/lib/findbugs-ant-3.0.0.jar" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" />
 		<mkdir dir="${report.findbugs.dir}" />
-		<findbugs home="." workHard="true" output="html" outputFile="${report.findbugs.dir}/findbugs.html">
+		<findbugs home="." workHard="true" output="html" outputFile="${report.findbugs.dir}/findbugs.html" >
 			<class location="${build.dir}/cobra-no-commons.jar" />
 			<class location="${build.dir}/lobo.jar" />
 			<class location="${build.dir}/lobo-pub.jar" />
@@ -129,7 +128,7 @@
 	</target>
 
 	<target name="pmd_compile">
-		<taskdef name="pmd" classpath="lib/pmd/pmd-4.2.6.jar" classname="net.sourceforge.pmd.ant.PMDTask"/>
+		<taskdef name="pmd" classpath="XAMJ_Build/lib/pmd/pmd-4.2.6.jar" classname="net.sourceforge.pmd.ant.PMDTask"/>
 		<mkdir dir="${report.pmd.dir}" />
 		<pmd rulesetfiles="lib/pmd/rulset.xml">
 			<formatter type="html" toFile="${report.pmd.dir}/pmd.html"/>
