--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 		<classpath path="lib/junit/hamcrest-core-1.3.jar"/>
         <formatter type="plain" usefile="false" /> <!-- to screen -->
         <batchtest>
-            <fileset dir="Testing/src/main/java/org/lobobrowser/html/" includes="**/*.java" />
+            <fileset dir="Testing/src/main/java/org/lobobrowser/html/" includes="**/*.class" />
         </batchtest>
     </junit>
 </target>
