--- a/LoboEvolution_Build/build.xml
+++ b/LoboEvolution_Build/build.xml
@@ -10,7 +10,7 @@
 	<property name="izpack.home" value="/tmp/IzPack/" />
 	<property name="report.findbugs.dir" value="${build.dir}/findbugs/" />
 	<property name="report.pmd.dir" value="${build.dir}/pmd/" />
-	<taskdef name="izpack" classpath="XAMJ_Build\compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
+	<taskdef name="izpack" classpath="LoboEvolution_Build\compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
 	<target name="default" depends="builddir,distros" />
 	<target name="distros" depends="installer,lobo_zip" />
 
@@ -20,12 +20,12 @@
 
 	<target name="installer" depends="izpackext_jar,directory_structure">
 		<copy todir="${build.dir}">
-			<fileset dir="XAMJ_Build" includes="jRegistryKey.jar" />
+			<fileset dir="LoboEvolution_Build" includes="jRegistryKey.jar" />
 		</copy>
 		<copy todir="${izpack.home}/bin/panels">
 			<fileset dir="${build.dir}" includes="RegistryPanel.jar" />
 		</copy>
-		<izpack input="XAMJ_Build/install.xml" output="${build.dir}/install-lobo-${lobo.version}.jar" installerType="standard" basedir="${lobo.dir}" izPackDir="${izpack.home}" />
+		<izpack input="LoboEvolution_Build/install.xml" output="${build.dir}/install-lobo-${lobo.version}.jar" installerType="standard" basedir="${lobo.dir}" izPackDir="${izpack.home}" />
 	</target>
 
 	<target name="lobo_zip" depends="directory_structure">
@@ -42,33 +42,33 @@
 			</fileset>
 		</delete>
 		<copy todir="${lobo.dir}">
-			<fileset dir="XAMJ_Build" includes="LICENSE.txt,ACKNOWLEDGMENTS.txt,README.txt,*.xml,*.ico,*.gif,*.png,*.jpg,*.htln" />
+			<fileset dir="LoboEvolution_Build" includes="LICENSE.txt,ACKNOWLEDGMENTS.txt,README.txt,*.xml,*.ico,*.gif,*.png,*.jpg,*.htln" />
 			<fileset dir="${build.dir}" includes="lobo.jar,lobo-pub.jar" />
 		</copy>
 		<copy todir="${lobo.dir}/ext">
-			<fileset dir="XAMJ_Build/ext" includes="*.jar" />
+			<fileset dir="LoboEvolution_Build/ext" includes="*.jar" />
 			<fileset dir="${build.dir}" includes="cobra-no-commons.jar" />
 			<fileset dir="${build.dir}" includes="primary.jar" />
 		</copy>
 		<copy todir="${lobo.dir}/doc">
-			<fileset dir="XAMJ_Build/lobo-docs" includes="**/*.html,**/*.css,**/*.gif" />
+			<fileset dir="LoboEvolution_Build/lobo-docs" includes="**/*.html,**/*.css,**/*.gif" />
 		</copy>
 	</target>
 
 	<target name="cobra_no_commons" depends="html_classfiles,parser_classfiles">
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="HTML_Renderer/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
 		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="parser/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" update="true" />
-		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="XAMJ_Build/" includes="log4j2.xml" update="true" />
+		<jar destfile="${build.dir}/cobra-no-commons.jar" basedir="LoboEvolution_Build/" includes="log4j2.xml" update="true" />
 	</target>
 
 	<target name="primary_extension" depends="primary_extension_classfiles">
 		<jar destfile="${build.dir}/primary.jar" basedir="Primary_Extension/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg,**/*.properties" />
-		<jar destfile="${build.dir}/primary.jar" basedir="XAMJ_Build/" includes="log4j2.xml" update="true" />
+		<jar destfile="${build.dir}/primary.jar" basedir="LoboEvolution_Build/" includes="log4j2.xml" update="true" />
 	</target>
 
 	<target name="public_jar" depends="public_classfiles">
 		<jar destfile="${build.dir}/lobo-pub.jar" basedir="Platform_Public_API/bin/" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
-		<jar destfile="${build.dir}/lobo-pub.jar" basedir="XAMJ_Build/" includes="log4j2.xml" update="true" />
+		<jar destfile="${build.dir}/lobo-pub.jar" basedir="LoboEvolution_Build/" includes="log4j2.xml" update="true" />
 	</target>
 
 	<target name="public_classfiles">
@@ -88,7 +88,7 @@
 		</jar>
 		<jar destfile="${build.dir}/lobo.jar" basedir="Common/bin/" includes="**/*.class" update="true" />
 		<jar destfile="${build.dir}/lobo.jar" basedir="Platform_Core/bin/" includes="**/*.png,**/*.gif" update="true" />
-		<jar destfile="${build.dir}/lobo.jar" basedir="XAMJ_Build/" includes="log4j2.xml" update="true" />
+		<jar destfile="${build.dir}/lobo.jar" basedir="LoboEvolution_Build/" includes="log4j2.xml" update="true" />
 	</target>
 
 	<target name="lobo_classfiles" depends="public_classfiles,common_classfiles">
@@ -109,10 +109,10 @@
 
 	<target name="izpackext_jar" depends="izpackext_classfiles">
 		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="IzPack_RegistryPanel\bin" includes="**/*.class,**/*.xml,**/*.xamj,**/.xami,**/*.gif,**/*.png,**/*.jpg" />
-		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="XAMJ_Build" includes="log4j2.xml" update="true" />
+		<jar destfile="${build.dir}/RegistryPanel.jar" basedir="LoboEvolution_Build" includes="log4j2.xml" update="true" />
 	</target>
 
 	<target name="izpackext_classfiles">
-		<javac srcdir="IzPack_RegistryPanel\bin" source="1.8" destdir="IzPack_RegistryPanel\bin" classpath="XAMJ_Build/installer.jar" debug="on" includeantruntime="false" />
+		<javac srcdir="IzPack_RegistryPanel\bin" source="1.8" destdir="IzPack_RegistryPanel\bin" classpath="LoboEvolution_Build/installer.jar" debug="on" includeantruntime="false" />
 	</target>
 </project>
