--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,8 @@
+plugins:
+  sonar-java:
+    enabled: true
+    config:
+      sonar.java.source: 8
+      
 exclude_patterns:
-- "parser/src/main/**"
+  - "parser/src/main/**"
