--- a/LoboEvolution_Build/build.xml
+++ b/LoboEvolution_Build/build.xml
@@ -83,7 +83,7 @@
 		<jar destfile="${build.dir}/lobo.jar" basedir="Platform_Core/bin/" includes="**/*.class">
 			<manifest>
 				<attribute name="Main-Class" value="org.loboevolution.main.EntryPoint" />
-				<attribute name="Class-Path" value="lobo-pub.jar ./ext/log4j-core-2.8.1.jar ./ext/log4j-api-2.8.1.jar ./ext/JTattoo-1.6.11.jar" />
+				<attribute name="Class-Path" value="lobo-pub.jar ./ext/log4j-core-2.8.1.jar ./ext/log4j-api-2.8.1.jar ./ext/JTattoo-1.6.11.jar ./ext/sqlite-jdbc-3.21.0.jar" />
 			</manifest>
 		</jar>
 		<jar destfile="${build.dir}/lobo.jar" basedir="Common/bin/" includes="**/*.class" update="true" />
