--- a/Primary_Extension/.classpath
+++ b/Primary_Extension/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="/LoboEvolution_Build/ext/log4j-core-2.8.1.jar"/>
 	<classpathentry kind="lib" path="/LoboEvolution_Build/ext/batik-all-1.8.jar"/>
 	<classpathentry kind="lib" path="/LoboEvolution_Build/ext/sqlite-jdbc-3.21.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/parser"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
