--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,18 @@
+build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - java-scrutinizer-run
+
 checks:
     java: true
 
 filter:
     excluded_paths:
         - parser/src/main/**
+
+		
+		
+
+    
