--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,19 @@
-build:
-  nodes:
-    analysis:
-      tests:
-        override:
-          - java-scrutinizer-run
+# language: java
+# tests: true
 checks:
     java: true
+build:
+    nodes:
+        tests: true
+        analysis:
+            tests:
+                override:
+                    -
+                        command: java-sonar-run
+                        use_website_config: true
+            environment:
+                docker:
+                    remote_engine: true
 filter:
     excluded_paths:
         - parser/src/main/**
